--- a/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
@@ -127,7 +127,7 @@
                                                         </td>
                                                     }*@
                                                     <td>@i</td>
-                                                    <td id="txnNo">@Item.TransactionNo</td>
+                                                    <td>@Item.Narration</td>
                                                     <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
                                                     <td><inpu type="hidden" value="@Item.Amount" id="Amount_@i"></inpu>@Item.Amount</td>
