--- a/MyTradeMTG/Views/Master/PackageList.cshtml
+++ b/MyTradeMTG/Views/Master/PackageList.cshtml
@@ -190,7 +190,7 @@
 
                                                     }
                                                     <td>@Item.Status</td>
-                                                    <td>@Item.SponsorIncome</td>
+                                                    <td>@Item.SponsorIncome%</td>
                                                     @*<td>@Item.IscomboPackage</td>*@
                                                     <td class="d-flex">
                                                         <a href="/Master/PackageMaster?PackageID=@Item.Packageid" class="btn btn-info btn-xxs m-1">Edit</a>
