--- a/MyTradeMTG/Views/User/PayoutRequest.cshtml
+++ b/MyTradeMTG/Views/User/PayoutRequest.cshtml
@@ -153,7 +153,7 @@
                                                     <tr class="text-left">
                                                         <td>@i</td>
                                                         <td>@Item.Date</td>
-                                                        <td></td>
+                                                        <td>@Item.Narration</td>
                                                         <td>@Item.Amount</td>
                                                         <td>@Item.TDSAmount (@Item.ProcessingFee)</td>
                                                         <td>@Item.GrossAmount</td>
