--- a/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
@@ -437,6 +437,7 @@
 
     $(document).ready(function () {
         debugger;
+        jQuery.noConflict();
         $("#showbankdetailshdf").click(function () {
             $(".showallbankdetails").toggle();
         });
