--- a/MyTradeMTG/Views/Master/PackageMaster.cshtml
+++ b/MyTradeMTG/Views/Master/PackageMaster.cshtml
@@ -110,7 +110,7 @@
                                     </div>
                                 </div>*@
                         </div>
-                        <div class="row mb-2" id="divUpgradePackage">
+                        <div class="row mb-2">
                             <div class="col-md-3" style="display:none" id="divfromamount">
                                 <div class="form-group">
                                     <label class="col-form-label">From MTG Token/USDT<span style="color: red">*</span></label>
@@ -164,6 +164,36 @@
                             <div id="lblUpgradePackage">
                                 <h6>Upgrade Package Detail</h6><hr />
                             </div>
+                        </div>
+                        
+
+
+                        <div class="row mb-2" id="divUpgradePackage">
+                            @*<div class="col-md-3" style="display:none" id="divgst">
+                                    <div class="form-group">
+                                        <label class="col-form-label">GST(%)<span style="color: red">*</span></label>
+                                           @Html.TextBoxFor(m => m.IGST, new { @class = "form-control", @onkeypress = "return isNumberKey(event)",@onchange="return CalculateFinalAmount();" })
+                                    </div>
+                                </div>
+                                <div class="col-md-3" style="display:none" id="divhsn">
+                                    <div class="form-group">
+                                        <label class="col-form-label">HSN Code<span style="color: red">*</span></label>
+                                           @Html.TextBoxFor(m => m.HSNCode, new { @class = "form-control", })
+                                    </div>
+                                </div>
+                                <div class="col-md-3" style="display:none" id="divfinal">
+                                    <div class="form-group">
+                                        <label class="col-form-label">Final Price<span style="color: red">*</span></label>
+                                           @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @disabled = "disabled" })
+                                    </div>
+                                </div>*@
+                            @*<div class="col-md-3" style="display:none" id="divisjoinpackage">
+                                    <div class="form-group">
+                                        <label class="col-form-label">Is Combo Package</label>
+                                            <input type="checkbox" id="Iscombo" class="form-control" style= "width:16px;"/>
+                                            <input type="hidden" value="@Model.IscomboPackage" id="IscomboPackage"/>
+                                    </div>
+                                </div>*@
                             <div class="col-md-3" id="divdramount1">
                                 <label>Direct Count 1 <span style="color: red"></span></label>
                                 @Html.TextBoxFor(m => m.DrAmount1, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
@@ -212,36 +242,6 @@
                                 @Html.DropDownListFor(m => m.Fk_PackageId3, new SelectList(ViewBag.ddlPackageForTR2, "Value", "Text"), new { @class = "form-control" })
                             </div>
 
-                        </div>
-                        
-
-
-                        <div class="row mb-2">
-                            @*<div class="col-md-3" style="display:none" id="divgst">
-                                    <div class="form-group">
-                                        <label class="col-form-label">GST(%)<span style="color: red">*</span></label>
-                                           @Html.TextBoxFor(m => m.IGST, new { @class = "form-control", @onkeypress = "return isNumberKey(event)",@onchange="return CalculateFinalAmount();" })
-                                    </div>
-                                </div>
-                                <div class="col-md-3" style="display:none" id="divhsn">
-                                    <div class="form-group">
-                                        <label class="col-form-label">HSN Code<span style="color: red">*</span></label>
-                                           @Html.TextBoxFor(m => m.HSNCode, new { @class = "form-control", })
-                                    </div>
-                                </div>
-                                <div class="col-md-3" style="display:none" id="divfinal">
-                                    <div class="form-group">
-                                        <label class="col-form-label">Final Price<span style="color: red">*</span></label>
-                                           @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @disabled = "disabled" })
-                                    </div>
-                                </div>*@
-                            @*<div class="col-md-3" style="display:none" id="divisjoinpackage">
-                                    <div class="form-group">
-                                        <label class="col-form-label">Is Combo Package</label>
-                                            <input type="checkbox" id="Iscombo" class="form-control" style= "width:16px;"/>
-                                            <input type="hidden" value="@Model.IscomboPackage" id="IscomboPackage"/>
-                                    </div>
-                                </div>*@
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-6">
@@ -340,9 +340,9 @@
         debugger;
         var packagetype = $("#PackageTypeId").val();
         if (packagetype == 2) {
-            //$("#divfromamount").show();
-            //$("#divtoamount").show();
-            //$("#divmultiple").show();
+            $("#divfromamount").show();
+            $("#divtoamount").show();
+            $("#divmultiple").show();
             $("#divpercent").show();
             $("#opt1").hide();
             $("#opt2").show();
@@ -355,6 +355,7 @@
             $("#divfinal").hide();
             $("#divsponsorpercent").show();
             $("#divUpgradePackage").show();
+            $("#lblUpgradePackage").show();
 
             $("#divbasis").show();
 
@@ -416,7 +417,7 @@
             $("#divPackage2").hide();
             $("#divPackage3").hide();
             $("#divUpgPackage").hide();
-            $("#divUpgradePackage").hide();
+            $("#lblUpgradePackage").hide();
 
 
             //var ComboPackage = $("#IscomboPackage").val();
@@ -463,6 +464,7 @@
             $("#divPackage3").hide();
             $("#divUpgPackage").hide();
             $("#divUpgradePackage").hide();
+            $("#lblUpgradePackage").hide();
 
         }
     });
@@ -584,6 +586,7 @@
             $("#divhsn").hide();
             $("#divfinal").hide();
             $("#divsponsorpercent").show();
+            $("#lblUpgradePackage").show();
 
 
 
@@ -612,17 +615,18 @@
             
             $("#UpgPackage").click(function () {
                 if ($(this).is(":checked")) {
-                    //$("#divfromamount").hide();
-                    //$("#divtoamount").hide();
-                    //$("#divmultiple").hide();
-                    //$("#lblUpgradePackage").hide();
+                    $("#divfromamount").hide();
+                    $("#divtoamount").hide();
+                    $("#divmultiple").hide();
+                    $("#lblUpgradePackage").hide();
                     $("#divUpgradePackage").hide();
                     
                 }
                 else {
-                    //$("#divfromamount").show();
-                    //$("#divtoamount").show();
-                    //$("#divmultiple").show();
+                    $("#divfromamount").show();
+                    $("#divtoamount").show();
+                    $("#divmultiple").show();
+                    $("#lblUpgradePackage").show();
                     $("#divUpgradePackage").show();
                 }
             });
@@ -668,6 +672,7 @@
             $("#divPackage2").hide();
             $("#divPackage3").hide();
             $("#divUpgPackage").hide();
+            $("#lblUpgradePackage").hide();
             $("#divUpgradePackage").hide();
 
 
@@ -707,7 +712,7 @@
             $("#divPackage3").hide();
             $("#divUpgPackage").hide();
             $("#divUpgradePackage").hide();
-            
+            $("#lblUpgradePackage").hide();
 
         }
     }
