--- a/MyTradeMTG/Views/Master/PackageList.cshtml
+++ b/MyTradeMTG/Views/Master/PackageList.cshtml
@@ -111,7 +111,7 @@
                                         }
                                         <th>Status</th>
                                         <th>Sponsor Income</th>
-                                        @*<th>Is Combo Package</th>*@
+                                        <th>Is Upgrade Package</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -191,7 +191,7 @@
                                                     }
                                                     <td>@Item.Status</td>
                                                     <td>@Item.SponsorIncome%</td>
-                                                    @*<td>@Item.IscomboPackage</td>*@
+                                                    <td>@Item.UpgPackage</td>
                                                     <td class="d-flex">
                                                         <a href="/Master/PackageMaster?PackageID=@Item.Packageid" class="btn btn-info btn-xxs m-1">Edit</a>
                                                         <a href="/Master/DeletePackage?id=@Item.Packageid" class="btn btn-danger btn-xxs m-1" onclick="return confirm('Are you sure you want to delete this Package?');" name="btnDelete">Delete</a>
