--- a/MyTradeMTG/Views/Master/PackageMaster.cshtml
+++ b/MyTradeMTG/Views/Master/PackageMaster.cshtml
@@ -32,8 +32,9 @@
                             </div>
                             <div class="col-md-3" id="divUpgPackage">
                                 <div class="example">
-                                    @*<label class="col-form-label">Upgrade Package Detail<span style="color: red"></span></label>*@<br /><br />
-                                    <input type="checkbox" name="UpgPackage" id="UpgPackage" /><span> Is Upgrade Package</span>
+                                    <br /><br />
+                                    <input type="checkbox" name="UpgPackage" id="UpgPackage" value="@Model.UpgPackage" /><span> Is Upgrade Package</span>
+                                    <input name="UpgPackage" type="hidden" value="@Model.UpgPackage" />
                                 </div>
                             </div>
                             <div class="col-md-3">
@@ -381,6 +382,27 @@
             $("#divPackage3").show();
 
 
+            $("#UpgPackage").click(function () {
+                debugger;
+                if ($("#UpgPackage").is(":checked")) {
+                    $("#divfromamount").hide();
+                    $("#divtoamount").hide();
+                    $("#divmultiple").hide();
+                    $("#divmtgtoken").hide();
+                    $("#lblUpgradePackage").hide();
+                    $("#divUpgradePackage").hide();
+                }
+                else {
+                    $("#divfromamount").show();
+                    $("#divtoamount").show();
+                    $("#divmultiple").show();
+                    $("#divmtgtoken").show();
+                    $("#lblUpgradePackage").show();
+                    $("#divUpgradePackage").show();
+                }
+            });
+
+
         }
         else if (packagetype == 1) {
             $("#divfromamount").show();
@@ -614,10 +636,12 @@
             //$("#divReturnPercent3").hide();
             
             $("#UpgPackage").click(function () {
+                debugger;
                 if ($(this).is(":checked")) {
                     $("#divfromamount").hide();
                     $("#divtoamount").hide();
                     $("#divmultiple").hide();
+                    $("#divmtgtoken").hide();
                     $("#lblUpgradePackage").hide();
                     $("#divUpgradePackage").hide();
                     
@@ -626,6 +650,7 @@
                     $("#divfromamount").show();
                     $("#divtoamount").show();
                     $("#divmultiple").show();
+                    $("#divmtgtoken").show();
                     $("#lblUpgradePackage").show();
                     $("#divUpgradePackage").show();
                 }
@@ -806,18 +831,19 @@
         //    $('#BV').focus();
         //    return false;
         //}
-        if ($('#ActivationMTGToken').val() == '' || $('#ActivationMTGToken').val() == '0') {
-            $("#ActivationMTGToken").addClass('errortext');
-            $('#ActivationMTGToken').focus();
-            return false;
-        }
+
+        //if ($('#activationmtgtoken').val() == '' || $('#activationmtgtoken').val() == '0') {
+        //    $("#activationmtgtoken").addclass('errortext');
+        //    $('#activationmtgtoken').focus();
+        //    return false;
+        //}
+       
 
         //if ($('#BasisOn').val() == '' || $('#BasisOn').val() == '0') {
         //    $("#BasisOn").addClass('errortext');
         //    $('#BasisOn').focus();
         //    return false;
         //}
-
 
         if ($('#PackageTypeId').val() == '2') {
 
@@ -1199,6 +1225,8 @@
             $('#PackageTypeId').focus();
             return false;
         }
+
+
         if ($('#ProductName').val() == '') {
             $("#ProductName").addClass('errortext');
             $('#ProductName').focus();
@@ -1306,21 +1334,21 @@
                 return false;
             }
 
-            if ($('#FromAmount').val() == '' || $('#FromAmount').val() == '0') {
-                $("#FromAmount").addClass('errortext');
-                $('#FromAmount').focus();
-                return false;
-            }
-            if ($('#ToAmount').val() == '' || $('#ToAmount').val() == '0') {
-                $("#ToAmount").addClass('errortext');
-                $('#ToAmount').focus();
-                return false;
-            }
-            if ($('#InMultipleOf').val() == '' || $('#InMultipleOf').val() == '0') {
-                $("#InMultipleOf").addClass('errortext');
-                $('#InMultipleOf').focus();
-                return false;
-            }
+            //if ($('#FromAmount').val() == '' || $('#FromAmount').val() == '0') {
+            //    $("#FromAmount").addClass('errortext');
+            //    $('#FromAmount').focus();
+            //    return false;
+            //}
+            //if ($('#ToAmount').val() == '' || $('#ToAmount').val() == '0') {
+            //    $("#ToAmount").addClass('errortext');
+            //    $('#ToAmount').focus();
+            //    return false;
+            //}
+            //if ($('#InMultipleOf').val() == '' || $('#InMultipleOf').val() == '0') {
+            //    $("#InMultipleOf").addClass('errortext');
+            //    $('#InMultipleOf').focus();
+            //    return false;
+            //}
 
 
         }
@@ -1428,7 +1456,7 @@
             url: "/Master/UpdateProduct",
             Type: "Get",
             DataType: "JSON",
-            data: { PackageType: $("#PackageTypeId").val(), Packageid: $("#Packageid").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), BasisOn: $("#BasisOn :selected").val(), ROIPercent: $("#ROIPercent").val(), ActivationMTGToken: $("#ActivationMTGToken").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val(), FinalAmount: $("#FinalAmount").val(), SponsorIncome: $('#SponsorIncome').val(), DrAmount1: $('#DrAmount1').val(), DrAmount2: $('#DrAmount2').val(), DrAmount3: $('#DrAmount3').val(), ReturnPercent1: $('#ReturnPercent1').val(), ReturnPercent2: $('#ReturnPercent2').val(), ReturnPercent3: $('#ReturnPercent3').val(), IscomboPackage: IscomboPackage },
+            data: { PackageType: $("#PackageTypeId").val(), Packageid: $("#Packageid").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), BasisOn: $("#BasisOn :selected").val(), ROIPercent: $("#ROIPercent").val(), ActivationMTGToken: $("#ActivationMTGToken").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val(), FinalAmount: $("#FinalAmount").val(), SponsorIncome: $('#SponsorIncome').val(), DrAmount1: $('#DrAmount1').val(), DrAmount2: $('#DrAmount2').val(), DrAmount3: $('#DrAmount3').val(), ReturnPercent1: $('#ReturnPercent1').val(), ReturnPercent2: $('#ReturnPercent2').val(), ReturnPercent3: $('#ReturnPercent3').val(), IscomboPackage: IscomboPackage, IsUpgradePackage: IsUpgradePackage },
             success: function (data) {
                 //alert(data.Result);
                 window.location.href = '@Url.Action("PackageMaster", "Master")';
