--- a/MyTradeMTG/Views/Master/PackageMaster.cshtml
+++ b/MyTradeMTG/Views/Master/PackageMaster.cshtml
@@ -559,7 +559,7 @@
 
 
     }
-    
+
     function bindbvprice() {
         var productprice = $('#ProductPrice').val();
         if ($('#ProductPrice').val() == '') {
@@ -634,7 +634,7 @@
             //$("#divReturnPercent1").hide();
             //$("#divReturnPercent2").hide();
             //$("#divReturnPercent3").hide();
-            
+
             $("#UpgPackage").click(function () {
                 debugger;
                 if ($(this).is(":checked")) {
@@ -644,7 +644,7 @@
                     $("#divmtgtoken").hide();
                     $("#lblUpgradePackage").hide();
                     $("#divUpgradePackage").hide();
-                    
+
                 }
                 else {
                     $("#divfromamount").show();
@@ -832,7 +832,7 @@
         //    $('#BV').focus();
         //    return false;
         //}
-        
+
         if (IsUpgradePackage == '0' || IsUpgradePackage == '')
         {
             if ($('#ActivationMTGToken').val() == '' || $('#ActivationMTGToken').val() == '0') {
@@ -841,7 +841,7 @@
                 return false;
             }
         }
-        
+
         //if ($('#BasisOn').val() == '' || $('#BasisOn').val() == '0') {
         //    $("#BasisOn").addClass('errortext');
         //    $('#BasisOn').focus();
@@ -855,7 +855,7 @@
                 $('#ROIPercent').focus();
                 return false;
             }
-            
+
             //if ($('#DrAmount1').val() == '' || $('#DrAmount1').val() == '0') {
             //    $("#DrAmount1").addClass('errortext');
             //    $('#DrAmount1').focus();
@@ -1042,9 +1042,9 @@
             DataType: "JSON",
             data: { PackageType: $("#PackageTypeId").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), BasisOn: $("#BasisOn :selected").val(), ROIPercent: $("#ROIPercent").val(), ActivationMTGToken: $("#ActivationMTGToken").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val(), FinalAmount: $('#FinalAmount').val(), SponsorIncome: $('#SponsorIncome').val(), DrAmount1: $('#DrAmount1').val(), DrAmount2: $('#DrAmount2').val(), DrAmount3: $('#DrAmount3').val(), ReturnPercent1: $('#ReturnPercent1').val(), ReturnPercent2: $('#ReturnPercent2').val(), ReturnPercent3: $('#ReturnPercent3').val(), IscomboPackage: IscomboPackage, Fk_PackageId1: $('#Fk_PackageId1').val(), Fk_PackageId2: $('#Fk_PackageId2').val(), Fk_PackageId3: $('#Fk_PackageId3').val(), IsUpgradePackage: IsUpgradePackage },
             success: function (data) {
-                alert(data.Result);
+                //alert(data.Result);
                 window.location.href = '@Url.Action("PackageMaster", "Master")';
-              
+
             }
         });
     }
