--- a/MyTradeMTG/Views/User/TopUpList.cshtml
+++ b/MyTradeMTG/Views/User/TopUpList.cshtml
@@ -59,9 +59,9 @@
                                             @*<th>Is Calculated</th>*@
                                             <th>Transaction By</th>
                                             <th>Status</th>
-                                            <th>Return Percentage</th>
+                                            <th>Return %</th>
                                             <th>Basis On</th>
-                                            <th>Days</th>
+                                            <th>View</th>
                                             <th>Date</th>
                                             @*<th>TopUp Id</th>*@
                                         </tr>
@@ -78,7 +78,7 @@
                                                     <tr class="text-left">
                                                         @*<td>@i</td>*@
                                                         <td>@i</td>
-                                                        <td>@Item.Topupid</td>
+                                                        <td>@Item.TopUpIdRandom</td>
                                                         <td>@Item.ProductName</td>
                                                         <td>@Item.PinAmount</td>
                                                         <td>@Item.ActivationMTGToken</td>
