--- a/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
+++ b/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
@@ -49,8 +49,9 @@
                                     <thead>
                                         <tr>
                                             <th>S No.</th>
-                                            <th>TR2</th>
-                                            <th>TR2 Date</th>
+                                            <th>TopUpID</th>
+                                            <th>T_Bonus</th>
+                                            <th>T_Bonus Date</th>
                                             <th>Status</th>
                                         </tr>
                                     </thead>
@@ -64,6 +65,7 @@
                                                 {
                                                     <tr class="text-left">
                                                         <td>@i</td>
+                                                        <td>@Item.TopUpIdRandom</td>
                                                         <td>@Item.ROI</td>
                                                         <td>@Item.Date</td>
                                                         <td>@Item.Status</td>
