--- a/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
@@ -16,9 +16,9 @@
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
                                     <h4>Update KYC </h4>
-                                    @*<span class="text-danger">
+                                    <span class="text-danger">
                                             @TempData["msg"]
-                                        </span>*@
+                                        </span>
                                 </div>
                             </div>
                         </div>
