--- a/MyTradeMTG/Views/User/TopUp.cshtml
+++ b/MyTradeMTG/Views/User/TopUp.cshtml
@@ -239,11 +239,12 @@
             swal({
                 backdrop: true,
                 allowOutsideClick: false,
-                title: 'Top-Up Done successfully !!',
+                title: '@TempData["msg"]',
                 type: 'success',
                 showCancelButton: 0,
                 confirmButtonText: 'OK',
             })
+
         })
     </script>
 }
