--- a/MyTradeMTG/Views/Master/PackageMaster.cshtml
+++ b/MyTradeMTG/Views/Master/PackageMaster.cshtml
@@ -14,9 +14,9 @@
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
                                 <h4>Package Master</h4>
-                                <span class="text-danger">
+                                @*<span class="text-danger">
                                     @TempData["Product"]
-                                </span>
+                                </span>*@
                             </div>
                         </div>
                     </div>
@@ -328,6 +328,12 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+@*<script src="~/plugins/sweetalerts/sweetalert2.min.js"></script>*@
+    <script src="~/plugins/sweetalerts/custom-sweetalert.js"></script>
+<script src="~/plugins/notification/snackbar/snackbar.min.js"></script>
+<script src="~/assets/js/components/notification/custom-snackbar.js"></script>
+
 <script>
 
         debugger;
@@ -1042,7 +1048,7 @@
             DataType: "JSON",
             data: { PackageType: $("#PackageTypeId").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), BasisOn: $("#BasisOn :selected").val(), ROIPercent: $("#ROIPercent").val(), ActivationMTGToken: $("#ActivationMTGToken").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val(), FinalAmount: $('#FinalAmount').val(), SponsorIncome: $('#SponsorIncome').val(), DrAmount1: $('#DrAmount1').val(), DrAmount2: $('#DrAmount2').val(), DrAmount3: $('#DrAmount3').val(), ReturnPercent1: $('#ReturnPercent1').val(), ReturnPercent2: $('#ReturnPercent2').val(), ReturnPercent3: $('#ReturnPercent3').val(), IscomboPackage: IscomboPackage, Fk_PackageId1: $('#Fk_PackageId1').val(), Fk_PackageId2: $('#Fk_PackageId2').val(), Fk_PackageId3: $('#Fk_PackageId3').val(), IsUpgradePackage: IsUpgradePackage },
             success: function (data) {
-                //alert(data.Result);
+                alert(data.Result)
                 window.location.href = '@Url.Action("PackageMaster", "Master")';
 
             }
@@ -1463,7 +1469,7 @@
             DataType: "JSON",
             data: { PackageType: $("#PackageTypeId").val(), Packageid: $("#Packageid").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), BasisOn: $("#BasisOn :selected").val(), ROIPercent: $("#ROIPercent").val(), ActivationMTGToken: $("#ActivationMTGToken").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val(), FinalAmount: $("#FinalAmount").val(), SponsorIncome: $('#SponsorIncome').val(), DrAmount1: $('#DrAmount1').val(), DrAmount2: $('#DrAmount2').val(), DrAmount3: $('#DrAmount3').val(), ReturnPercent1: $('#ReturnPercent1').val(), ReturnPercent2: $('#ReturnPercent2').val(), ReturnPercent3: $('#ReturnPercent3').val(), IscomboPackage: IscomboPackage, IsUpgradePackage: IsUpgradePackage },
             success: function (data) {
-                //alert(data.Result);
+                alert(data.Result) 
                 window.location.href = '@Url.Action("PackageMaster", "Master")';
             }
 
