--- a/MyTradeMTG/Views/User/TopUp.cshtml
+++ b/MyTradeMTG/Views/User/TopUp.cshtml
@@ -222,7 +222,7 @@
 }
 
 <script src="~/MyTradeMTGWebsite/assets/js/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+@*<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>*@
 @*<script src="~/plugins/sweetalerts/sweetalert2.min.js"></script>
     <script src="~/plugins/sweetalerts/custom-sweetalert.js"></script>*@
 <script src="~/plugins/notification/snackbar/snackbar.min.js"></script>
