--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -5,9 +5,17 @@
     Layout = "~/Views/Shared/Website_LayoutPage.cshtml";
 }
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"
+        crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.min.css"
+      crossorigin="anonymous" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js" crossorigin="anonymous"></script>
 
-
-
+<style>
+    .iti__country-name{
+        color:#000000;
+    }
+</style>
 
 <!-- START HOME -->
 <section id="home" class="home_bg">
@@ -594,7 +602,17 @@
 
                     </div>
                     <div class="col-lg-12 form-group">
-                        <input id="phone" type="tel" placeholder="Enter Mobile No." maxlength="15" onkeypress="return isNumberKey(event);">
+                        @*<input id="phone" type="tel" placeholder="Enter Mobile No." maxlength="15" onkeypress="return isNumberKey(event);">*@
+
+                        <input name="phone1" type="text" class="form-control mb-2 inptFielsd" id="phone1"
+                               placeholder="Phone Number" />
+                        <input id="country" type="hidden" name="country">
+                        <div style="display:none;">
+                            <span id="country1"></span>
+                        </div>
+                        
+
+
                         @*<span id="valid-msg" class="hide">Valid</span>*@
                         @*<span style="color:red;" id="error-msg" class="hide">Invalid number</span>*@
                     </div>
@@ -800,9 +818,9 @@
             $('#FirstName').focus();
             return false;
         }
-        if ($('#phone').val() == '') {
-            $("#phone").addClass('errortext');
-            $('#phone').focus();
+        if ($('#phone1').val() == '') {
+            $("#phone1").addClass('errortext');
+            $('#phone1').focus();
             return false;
         }
         if ($('#Email').val() == '') {
@@ -831,7 +849,7 @@
         //    return false;
         //}
 
-        $("#phone").attr("disabled", "disabled");
+        $("#phone1").attr("disabled", "disabled");
         $("#FirstName").attr("disabled", "disabled");
         $("#SponsorId").attr("disabled", "disabled");
         $("#LastName").attr("disabled", "disabled");
@@ -847,7 +865,7 @@
     }
 
     function editregistration() {
-        $("#phone").attr("disabled", false);
+        $("#phone1").attr("disabled", false);
         $("#FirstName").attr("disabled", false);
         $("#LastName").attr("disabled", false);
         $("#SponsorId").attr("disabled", false);
@@ -865,6 +883,12 @@
 
     function saveregistration() {
         debugger;
+        var CountryCode = $(".iti__selected-dial-code").text();
+        
+        country1.innerHTML = country.value.replace(/ *\([^)]*\) */g, "");
+
+        var Country = $("#country1").text();
+
         $('#Register').attr("disabled", "disabled");
         $("#divload").css({ 'display': '' });
         var Leg = "";
@@ -878,7 +902,7 @@
             url: "/Website/RegistrationAction",
             Type: "Get",
             DataType: "JSON",
-            data: { SponsorId: $("#SponsorId").val(), FirstName: $("#FirstName").val(), LastName: $("#LastName").val(), MobileNo: $("#phone").val(), Leg: Leg, Password: $("#Password2").val(), Email: $("#Email").val() },
+            data: { SponsorId: $("#SponsorId").val(), FirstName: $("#FirstName").val(), LastName: $("#LastName").val(), MobileNo: $("#phone1").val(), Leg: Leg, Password: $("#Password2").val(), Email: $("#Email").val(), CountryCode: CountryCode, Country: Country },
             success: function (data) {
                 debugger;
                 if (data.Result == "1") {
@@ -965,26 +989,27 @@
             }
         }
     }
-   function onlyAlphabets(e, t) {
-            try {
-                if (window.event) {
-                    var charCode = window.event.keyCode;
-                }
-                else if (e) {
-                    var charCode = e.which;
-                }
-                else { return true; }
-                if ((charCode > 64 && charCode < 91) || (charCode > 96 && charCode < 123))
-                    return true;
-                else
-                    return false;
+    function onlyAlphabets(e, t) {
+        try {
+            if (window.event) {
+                var charCode = window.event.keyCode;
             }
-            catch (err) {
-                alert(err.Description);
+            else if (e) {
+                var charCode = e.which;
             }
+            else { return true; }
+            if ((charCode > 64 && charCode < 91) || (charCode > 96 && charCode < 123))
+                return true;
+            else
+                return false;
         }
+        catch (err) {
+            alert(err.Description);
+        }
+    }
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
 <script>
     $(document).ready(function () {
         debugger;
@@ -1012,3 +1037,22 @@
 </script>
 
 
+<script>
+    var input = document.querySelector("#phone1");
+    window.intlTelInput(input, {
+        separateDialCode: true,
+        customPlaceholder: function (
+            selectedCountryPlaceholder,
+            selectedCountryData
+        ) {
+            return "e.g. " + selectedCountryPlaceholder;
+        },
+    });
+
+    var iti = window.intlTelInputGlobals.getInstance(input);
+
+    input.addEventListener('input', function() {
+      var countryName = iti.getSelectedCountryData().name;
+      document.getElementById('country').value = countryName;
+    });
+</script>
