--- a/MyTradeMTG/Views/User/TopUp.cshtml
+++ b/MyTradeMTG/Views/User/TopUp.cshtml
@@ -220,8 +220,8 @@
         </div>
     </div>
 }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-<script src="~/MyTradeMTGWebsite/assets/js/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 @*<script src="~/plugins/sweetalerts/sweetalert2.min.js"></script>
     <script src="~/plugins/sweetalerts/custom-sweetalert.js"></script>*@
@@ -236,7 +236,7 @@
         $(document).ready(function () {
             debugger;
             jQuery.noConflict();
-            swal({
+            swal.fire({
                 backdrop: true,
                 allowOutsideClick: false,
                 title: '@TempData["msg"]',
@@ -531,7 +531,8 @@
 {
     <script>
         $(document).ready(function () {
-            swal({
+            jQuery.noConflict();
+            swal.fire({
                 text: '@TempData["msg"]',
                 title: 'Success',
                 type: 'success',
@@ -584,7 +585,6 @@
     })
 </script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script>
     function ChangePackagetype() {
         debugger;
