--- a/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
+++ b/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
@@ -17,7 +17,7 @@
                                 @*<div class="col-xl-12 col-md-12 col-sm-12 col-12">*@
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <h4>View TR2</h4>
+                                        <h4>View    @ViewBag.PackageTypeName</h4>
                                         <span class="text-danger">
                                             @TempData["ROIIncome"]
                                         </span>
